--- a/etc_scripts/default/aha_uwsgi.ini
+++ b/etc_scripts/default/aha_uwsgi.ini
@@ -1,6 +1,9 @@
 [uwsgi]
+pythonpath=/var/www/Aha
+virtualenv=/var/www/Aha/venv
 module=runserver
 callable=app
 socket=/var/www/Aha/%n.sock
 chmod-socket=666
 logto=/var/log/uwsgi/%n.log
+
