--- a/conf_files/aha-nginx.conf
+++ b/conf_files/aha-nginx.conf
@@ -9,4 +9,14 @@ server {
         include uwsgi_params;
         uwsgi_pass unix:/var/www/Aha/aha_uwsgi.sock;
     }
+
+     location /hls {
+            # Serve HLS fragments
+            types {
+                application/vnd.apple.mpegurl m3u8;
+                video/mp2t ts;
+            }
+            root /run/shm/hls;
+            add_header Cache-Control no-cache;
+    }
 }
