--- a/conf_files/aha-nginx.conf
+++ b/conf_files/aha-nginx.conf
@@ -4,13 +4,15 @@ server {
     charset     utf-8;
     client_max_body_size 75M;
 
-    location / { try_files $uri @yourapplication; }
+    location / { 
+    	try_files $uri @yourapplication; 
+    }
     location @yourapplication {
         include uwsgi_params;
         uwsgi_pass unix:/var/www/Aha/aha_uwsgi.sock;
     }
 
-     location /hls {
+    location /hls {
             # Serve HLS fragments
             types {
                 application/vnd.apple.mpegurl m3u8;
