--- a/conf_files/aha-nginx.conf
+++ b/conf_files/aha-nginx.conf
@@ -4,16 +4,17 @@ server {
     charset     utf-8;
     client_max_body_size 75M;
 
-    
     location /hls {
-            # Serve HLS fragments
-            types {
-                application/vnd.apple.mpegurl m3u8;
-                video/mp2t ts;
-            }
-            root /run/shm/hls;
-            add_header Cache-Control no-cache;
+        types {
+            application/vnd.apple.mpegurl m3u8;
+        }
+        root /run/shm;
+        add_header Cache-Control no-cache;
+
+        # To avoid issues with cross-domain HTTP requests (e.g. during development)
+        add_header Access-Control-Allow-Origin *;
     }
+
 
     location / { 
     	try_files $uri @yourapplication; 
