giving up on uwsgi

--- a/etc_scripts/default/aha_uwsgi.ini
+++ b/etc_scripts/default/aha_uwsgi.ini
@@ -3,11 +3,14 @@ pythonpath=/var/www/Aha
 virtualenv=/var/www/Aha/venv
 module=runserver
 callable=app
+uid=pi
+gid=pi
 socket=/var/www/Aha/%n.sock
 chmod-socket=666
 logto=/var/log/uwsgi/%n.log
-processes=4
 master=true
+enable-threads=true
+processes=4
 threads=2
 cpu-affinity=true
 harakiri=60
