--- a/conf_files/aha-nginx.conf
+++ b/conf_files/aha-nginx.conf
@@ -15,6 +15,9 @@ server {
         add_header Access-Control-Allow-Origin *;
     }
 
+    location /media {
+        root /var/www/Aha;
+    }
 
     location / { 
     	try_files $uri @yourapplication; 
