--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,72 @@
-APScheduler==3.0.2
-Flask==0.10.1
-Flask-Login==0.2.11
-Flask-Mail==0.9.1
-Flask-Principal==0.4.0
-Flask-Restless==0.17.0
-Flask-SQLAlchemy==2.0
-Flask-Security==1.7.4
-Flask-WTF==0.11
 Jinja2==2.7.3
 MarkupSafe==0.23
-SQLAlchemy==0.9.9
-WTForms==2.0.2
-Werkzeug==0.10.1
-aniso8601==0.92
-blinker==1.3
-futures==2.2.0
-itsdangerous==0.24
-mimerender==0.5.5
-passlib==1.6.2
-python-dateutil==2.4.1
-python-mimeparse==0.1.4
-pytz==2014.10
-six==1.9.0
-tzlocal==1.1.2
+Pillow==2.8.1
+PyAudio==0.2.8
+PyYAML==3.11
+Twisted==13.2.0
+altgraph==0.10.2
+backports.ssl-match-hostname==3.4.0.2
+bdist-mpkg==0.5.0
+bonjour-py==0.3
+certifi==14.05.14
+ipython==1.2.1
+macholib==1.5.1
+matplotlib==1.3.1
+modulegraph==0.10.4
+nltk==2.0.4
+numpy==1.8.0rc1
+oauthlib==0.6.1
+py2app==0.7.3
+pyOpenSSL==0.13.1
+pyobjc-core==2.5.1
+pyobjc-framework-Accounts==2.5.1
+pyobjc-framework-AddressBook==2.5.1
+pyobjc-framework-AppleScriptKit==2.5.1
+pyobjc-framework-AppleScriptObjC==2.5.1
+pyobjc-framework-Automator==2.5.1
+pyobjc-framework-CFNetwork==2.5.1
+pyobjc-framework-Cocoa==2.5.1
+pyobjc-framework-Collaboration==2.5.1
+pyobjc-framework-CoreData==2.5.1
+pyobjc-framework-CoreLocation==2.5.1
+pyobjc-framework-CoreText==2.5.1
+pyobjc-framework-DictionaryServices==2.5.1
+pyobjc-framework-EventKit==2.5.1
+pyobjc-framework-ExceptionHandling==2.5.1
+pyobjc-framework-FSEvents==2.5.1
+pyobjc-framework-InputMethodKit==2.5.1
+pyobjc-framework-InstallerPlugins==2.5.1
+pyobjc-framework-InstantMessage==2.5.1
+pyobjc-framework-LatentSemanticMapping==2.5.1
+pyobjc-framework-LaunchServices==2.5.1
+pyobjc-framework-Message==2.5.1
+pyobjc-framework-OpenDirectory==2.5.1
+pyobjc-framework-PreferencePanes==2.5.1
+pyobjc-framework-PubSub==2.5.1
+pyobjc-framework-QTKit==2.5.1
+pyobjc-framework-Quartz==2.5.1
+pyobjc-framework-ScreenSaver==2.5.1
+pyobjc-framework-ScriptingBridge==2.5.1
+pyobjc-framework-SearchKit==2.5.1
+pyobjc-framework-ServiceManagement==2.5.1
+pyobjc-framework-Social==2.5.1
+pyobjc-framework-SyncServices==2.5.1
+pyobjc-framework-SystemConfiguration==2.5.1
+pyobjc-framework-WebKit==2.5.1
+pyparsing==2.0.1
+python-dateutil==1.5
+pytz==2013.7
+pyzmq==14.3.1
+readline==6.2.4.1
+requests==2.1.0
+requests-oauthlib==0.4.0
+scipy==0.13.0b1
+six==1.4.1
+tornado==4.0.2
+twython==3.1.2
+vboxapi==1.0
+virtualenv==1.11.4
+virtualenvwrapper==4.2
 wsgiref==0.1.2
+xattr==0.6.4
+zope.interface==4.1.1
